src/index.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap');

* {
    /* Remove all default styles. */
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    box-sizing: 0;
    list-style: none;
    text-decoration: none;
}

/* CSS variables. */
:root {
    --main-font: 'Raleway', sans-serif;
    --color-bg: #001233;
    --color-bg-variant: #5e60ce;
    --color-primary: #a1b4dc;
    --color-primary-variant: #c1d3fe;
    --color-light: #b0bbcc;
    --color-blue: #5390d9;
    --color-blue-clear: rgba(91, 108, 151, 0.25);

    --transition-ease: all 400ms ease;

    --vertical-gap: 1.2rem;

    /* Container widths for different window sizes. */
    --container-width-large: 75%;
    --container-width-medium: 86%;
    --container-width-small: 90%;

}

html,
body {
    scroll-behavior: smooth;
}

::-webkit-scrollbar {
    /* Hide scrollbar. */
    display: none;
}

body {
    font-family: var(--main-font);
    background: var(--color-bg);
    color: var(--color-primary);
    line-height: 1.5;
    background-image: repeating-linear-gradient(-45deg, 
        var(--color-blue-clear), 
        transparent 1px,
        transparent 6px);
    background-size: 4px 4px;
}

/* ===== GENERAL STYLES ===== */
.show {
    opacity: 1;
    transition: var(--transition-ease);
    transition-delay: 150ms;
    filter: blur(0rem);
    transform: translateX(0%);
}

.hide {
    transition: var(--transition-ease);
    opacity: 0;
    filter: blur(1rem);
    transform: translateX(+100%);
}

.container {
    width: var(--container-width-large);
    margin: 0 auto;
}

h2,
h3,
h4,
h5 {
    font-weight: 500;
}

h1 {
    font-weight: 100;
    font-size: 3rem;
}

section {
    margin-top: 8rem;
    height: 100%;
}

section>h2,
section>h5 {
    text-align: center;
    color: var(--color-primary)
}

section>h2 {
    /* color: */
    margin-bottom: 3rem;
}

.text-light {
    color: var(--color-light);
}

a {
    color: var(--color-bg-variant);
    transition: var(--transition-ease);
}

a:hover {
    color: var(--color-blue);
}

.btn {
    width: max-content;
    display: inline-block;
    color: var(--color-primary);
    padding: 0.75rem 1.2rem;
    border-radius: 0.4rem;
    cursor: pointer;
    border: 1px solid var(--color-bg-variant);
    transition: var(--transition-ease);
    font-family: var(--main-font);
    font-size: large;
}

.btn:hover {
    background: var(--color-blue-clear);
    color: var(--color-blue);
    border-color: var(--color-bg-variant);
}

.btn-primary {
    background: var(--color-bg-variant);
    color: var(--color-bg);
}


img {
    display: block;
    width: 100%;
    object-fit: cover;
}

@media(prefers-reduced--motion) {
    .hide, .show {
        transition: none;
    }
}

/* ===== MEDIA QUERIES (MEDIUM DEVICES) ===== */
@media screen and (max-width: 1024px) {
    .container {
        width: var(--container-width-medium);
    }

    section {
        margin-top: 6rem;
    }
}

/* ===== MEDIA QUERIES (SMALL DEVICES) ===== */
@media screen and (max-width: 600px) {
    .container {
        width: var(--container-width-small);
    }

    section>h2 {
        margin-top: 2rem;
    }
}

